Adjusted Google Colab cell to text

--- a/iso_country_codes/iso_country_codes_cleanup.ipynb
+++ b/iso_country_codes/iso_country_codes_cleanup.ipynb
@@ -26,18 +26,14 @@
   },
   "cells": [
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "V6XuShM-61pK"
+        "id": "2Zvs5NDP7oRx"
       },
       "source": [
-        "# Change was done through Google Colab\n",
-        "Try it!\n",
-        "\n",
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://github.com/One-O-Nine/data-cleaning/blob/main/iso_country_codes/iso_country_codes_cleanup.ipynb)"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "## This change was done through Google Colab\n",
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://github.com/One-O-Nine/data-cleaning/blob/main/iso_country_codes/iso_country_codes_cleanup.ipynb) \n"
+      ]
     },
     {
       "cell_type": "code",
