Fixed badge url

--- a/iso_country_codes/iso_country_codes_cleanup.ipynb
+++ b/iso_country_codes/iso_country_codes_cleanup.ipynb
@@ -32,7 +32,7 @@
       },
       "source": [
         "## This change was done through Google Colab\n",
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://github.com/One-O-Nine/data-cleaning/blob/main/iso_country_codes/iso_country_codes_cleanup.ipynb) \n"
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/One-O-Nine/data-cleaning/blob/main/iso_country_codes/iso_country_codes_cleanup.ipynb#scrollTo=2Zvs5NDP7oRx) \n"
       ]
     },
     {
