modified scripts to clean instruction time csv

--- a/instruction_time/instruction_time_analysis.ipynb
+++ b/instruction_time/instruction_time_analysis.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>COUNTRY</th>\n      <th>Country</th>\n      <th>YEAR</th>\n      <th>ISC11</th>\n      <th>ISCED 2011</th>\n      <th>SUBJECT</th>\n      <th>INDICATOR</th>\n      <th>Indicator</th>\n      <th>Value</th>\n      <th>Flags</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>FIN</td>\n      <td>Finland</td>\n      <td>2017</td>\n      <td>L1</td>\n      <td>Primary education (ISCED2011 level 1)</td>\n      <td>COM_T</td>\n      <td>HR_YR</td>\n      <td>Average hours per year of instruction time (in...</td>\n      <td>650.75000</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>FIN</td>\n      <td>Finland</td>\n      <td>2017</td>\n      <td>L1</td>\n      <td>Primary education (ISCED2011 level 1)</td>\n      <td>NCO_T</td>\n      <td>HR_YR</td>\n      <td>Average hours per year of instruction time (in...</td>\n      <td>32.57143</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>FIN</td>\n      <td>Finland</td>\n      <td>2017</td>\n      <td>L1</td>\n      <td>Primary education (ISCED2011 level 1)</td>\n      <td>INT_T</td>\n      <td>HR_YR</td>\n      <td>Average hours per year of instruction time (in...</td>\n      <td>683.32143</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>FIN</td>\n      <td>Finland</td>\n      <td>2017</td>\n      <td>L2_C4</td>\n      <td>Lower secondary general education  (ISCED2011 ...</td>\n      <td>COM_T</td>\n      <td>HR_YR</td>\n      <td>Average hours per year of instruction time (in...</td>\n      <td>807.50000</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>FIN</td>\n      <td>Finland</td>\n      <td>2017</td>\n      <td>L2_C4</td>\n      <td>Lower secondary general education  (ISCED2011 ...</td>\n      <td>NCO_T</td>\n      <td>HR_YR</td>\n      <td>Average hours per year of instruction time (in...</td>\n      <td>86.85714</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 63
+     "execution_count": 2
     }
    ],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -107,108 +107,35 @@
        "3   COM_T     HR_YR  Average hours per year of instruction time (in...   \n",
        "4   NCO_T     HR_YR  Average hours per year of instruction time (in...   \n",
        "\n",
-       "       value flags   id   ID  \n",
-       "0  650.75000   NaN  FIN  FIN  \n",
-       "1   32.57143   NaN  FIN  FIN  \n",
-       "2  683.32143   NaN  FIN  FIN  \n",
-       "3  807.50000   NaN  FIN  FIN  \n",
-       "4   86.85714   NaN  FIN  FIN  "
+       "       value flags   ID  \n",
+       "0  650.75000   NaN  FIN  \n",
+       "1   32.57143   NaN  FIN  \n",
+       "2  683.32143   NaN  FIN  \n",
+       "3  807.50000   NaN  FIN  \n",
+       "4   86.85714   NaN  FIN  "
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>country</th>\n      <th>year</th>\n      <th>isc11</th>\n      <th>isced 2011</th>\n      <th>subject</th>\n      <th>indicator</th>\n      <th>indicator</th>\n      <th>value</th>\n      <th>flags</th>\n      <th>id</th>\n      <th>ID</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Finland</td>\n      <td>2017</td>\n      <td>L1</td>\n      <td>Primary education (ISCED2011 level 1)</td>\n      <td>COM_T</td>\n      <td>HR_YR</td>\n      <td>Average hours per year of instruction time (in...</td>\n      <td>650.75000</td>\n      <td>NaN</td>\n      <td>FIN</td>\n      <td>FIN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Finland</td>\n      <td>2017</td>\n      <td>L1</td>\n      <td>Primary education (ISCED2011 level 1)</td>\n      <td>NCO_T</td>\n      <td>HR_YR</td>\n      <td>Average hours per year of instruction time (in...</td>\n      <td>32.57143</td>\n      <td>NaN</td>\n      <td>FIN</td>\n      <td>FIN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Finland</td>\n      <td>2017</td>\n      <td>L1</td>\n      <td>Primary education (ISCED2011 level 1)</td>\n      <td>INT_T</td>\n      <td>HR_YR</td>\n      <td>Average hours per year of instruction time (in...</td>\n      <td>683.32143</td>\n      <td>NaN</td>\n      <td>FIN</td>\n      <td>FIN</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Finland</td>\n      <td>2017</td>\n      <td>L2_C4</td>\n      <td>Lower secondary general education  (ISCED2011 ...</td>\n      <td>COM_T</td>\n      <td>HR_YR</td>\n      <td>Average hours per year of instruction time (in...</td>\n      <td>807.50000</td>\n      <td>NaN</td>\n      <td>FIN</td>\n      <td>FIN</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Finland</td>\n      <td>2017</td>\n      <td>L2_C4</td>\n      <td>Lower secondary general education  (ISCED2011 ...</td>\n      <td>NCO_T</td>\n      <td>HR_YR</td>\n      <td>Average hours per year of instruction time (in...</td>\n      <td>86.85714</td>\n      <td>NaN</td>\n      <td>FIN</td>\n      <td>FIN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>country</th>\n      <th>year</th>\n      <th>isc11</th>\n      <th>isced 2011</th>\n      <th>subject</th>\n      <th>indicator</th>\n      <th>indicator</th>\n      <th>value</th>\n      <th>flags</th>\n      <th>ID</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Finland</td>\n      <td>2017</td>\n      <td>L1</td>\n      <td>Primary education (ISCED2011 level 1)</td>\n      <td>COM_T</td>\n      <td>HR_YR</td>\n      <td>Average hours per year of instruction time (in...</td>\n      <td>650.75000</td>\n      <td>NaN</td>\n      <td>FIN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Finland</td>\n      <td>2017</td>\n      <td>L1</td>\n      <td>Primary education (ISCED2011 level 1)</td>\n      <td>NCO_T</td>\n      <td>HR_YR</td>\n      <td>Average hours per year of instruction time (in...</td>\n      <td>32.57143</td>\n      <td>NaN</td>\n      <td>FIN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Finland</td>\n      <td>2017</td>\n      <td>L1</td>\n      <td>Primary education (ISCED2011 level 1)</td>\n      <td>INT_T</td>\n      <td>HR_YR</td>\n      <td>Average hours per year of instruction time (in...</td>\n      <td>683.32143</td>\n      <td>NaN</td>\n      <td>FIN</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Finland</td>\n      <td>2017</td>\n      <td>L2_C4</td>\n      <td>Lower secondary general education  (ISCED2011 ...</td>\n      <td>COM_T</td>\n      <td>HR_YR</td>\n      <td>Average hours per year of instruction time (in...</td>\n      <td>807.50000</td>\n      <td>NaN</td>\n      <td>FIN</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Finland</td>\n      <td>2017</td>\n      <td>L2_C4</td>\n      <td>Lower secondary general education  (ISCED2011 ...</td>\n      <td>NCO_T</td>\n      <td>HR_YR</td>\n      <td>Average hours per year of instruction time (in...</td>\n      <td>86.85714</td>\n      <td>NaN</td>\n      <td>FIN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 67
+     "execution_count": 4
     }
    ],
    "source": [
-    "# df.drop('COUNTRY',inplace=True, axis=1)\n",
-    "df.columns = map(str.lower, df.columns)\n",
-    "df['ID'] = df['country'].str.strip().str.lower().map(iso_country_dic)\n",
+    "df_cleaninng = df.copy()\n",
+    "df_cleaninng = df_cleaninng.drop('COUNTRY', axis=1)\n",
+    "df_cleaninng.columns = map(str.lower, df_cleaninng.columns)\n",
+    "df_cleaninng['ID'] = df_cleaninng['country'].str.strip().str.lower().map(iso_country_dic)\n",
     "\n",
-    "df.head()"
+    "df_cleaninng.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df['Indicator'] = df['Indicator'].astype('category').cat.codes\n",
-    "\n",
-    "# df['INDICATOR'] = df['INDICATOR'].astype('category').cat.codes\n",
-    "# df[['Indicator', 'INDICATOR']].corr()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv('instruction_time_clean.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Keep for reference\n",
-    "# df.to_csv('instruction_time_clean.csv', index=False)\n",
-    "# df.\n",
-    "# Set columns to filter by\n",
-    "# integer_columns = ['YEAR', 'Year', 'PowerCode Code']\n",
-    "# float_columns = ['Value']\n",
-    "\n",
-    "# # Set all columns as its category... clean out values\n",
-    "# df[list(df.columns)] = df[list(df.columns)].astype('category')\n",
-    "# df[integer_columns] = df[integer_columns].astype(int)\n",
-    "# df[float_columns] = df[float_columns].astype(float)\n",
-    "\n",
-    "# # Verification of correlations between similar columns for us to drop\n",
-    "# #   * Unique Values returned on the right\n",
-    "# # df['SUBJECT'].unique # ['COM_T', 'INT_T', 'NCO_T']\n",
-    "# # df['Subject'].unique # ['Compulsory instruction time (total)', 'Intended instruction time (total)', 'Non-compulsory instruction time (total)']\n",
-    "# # df['AGE'].unique # ['T']\n",
-    "# # df['Age'].unique # ['Total: All age groups']\n",
-    "# # df['UNIT'].unique # []\n",
-    "# # df['Unit'].unique # []\n",
-    "# # df['PowerCode Code'].unique # Same value: 0\n",
-    "# # df['PowerCode'].unique # ['Units']\n",
-    "# # df['Reference Period Code'].unique # []\n",
-    "# # df['Reference Period'].unique # []\n",
-    "\n",
-    "# df['Value'] = df['Value'].fillna(np.NaN)\n",
-    "# df['Value'].unique\n",
-    "# # Set gathered from the unique tests\n",
-    "# columns_to_drop = [\n",
-    "#     'Year', # corr: 1\n",
-    "#     'Subject', # corr: 1\n",
-    "#     'AGE',\n",
-    "#     'Age',\n",
-    "#     'Unit Code',\n",
-    "#     'Unit',\n",
-    "#     'PowerCode Code',\n",
-    "#     'PowerCode',\n",
-    "#     'Reference Period Code',\n",
-    "#     'Reference Period',\n",
-    "#     'Flag Codes', # corr: 1\n",
-    "# ]\n",
-    "# df = df.drop(columns_to_drop, axis=1)\n",
-    "# df.to_csv('instruction_time_clean.csv', index=False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_clean = pd.read_csv('instruction_time_clean.csv')\n",
-    "# # df_clean['Value'].unique\n",
-    "# df_clean"
+    "df_cleaninng.to_csv('instruction_time_clean.csv', index=False)"
    ]
   }
  ]
