created scripts to clean completion-rates sets

--- a/iso_country_codes/iso_country_codes_cleanup.ipynb
+++ b/iso_country_codes/iso_country_codes_cleanup.ipynb
@@ -12,27 +12,46 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.2"
+      "version": "3.9.5"
     },
     "orig_nbformat": 2,
     "kernelspec": {
-      "name": "python392jvsc74a57bd06a41de241e3c49038dede047491b24d5e1076520a0a1437c5f16620212fe7a39",
-      "display_name": "Python 3.9.2 64-bit ('pip-2z6nf1Zb': venv)"
+      "name": "python3",
+      "display_name": "Python 3.9.5 64-bit"
     },
     "colab": {
       "name": "iso_country_codes_cleanup.ipynb",
       "provenance": []
+    },
+    "interpreter": {
+      "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
     }
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "2Zvs5NDP7oRx"
-      },
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: xlrd in /usr/local/lib/python3.9/site-packages (0.7.1)\n",
+            "Collecting xlrd\n",
+            "  Downloading xlrd-2.0.1-py2.py3-none-any.whl (96 kB)\n",
+            "\u001b[K     |████████████████████████████████| 96 kB 4.1 MB/s \n",
+            "\u001b[?25hInstalling collected packages: xlrd\n",
+            "  Attempting uninstall: xlrd\n",
+            "    Found existing installation: xlrd 0.7.1\n",
+            "    Uninstalling xlrd-0.7.1:\n",
+            "      Successfully uninstalled xlrd-0.7.1\n",
+            "Successfully installed xlrd-2.0.1\n"
+          ]
+        }
+      ],
       "source": [
-        "## This change was done through Google Colab\n",
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/One-O-Nine/data-cleaning/blob/main/iso_country_codes/iso_country_codes_cleanup.ipynb#scrollTo=2Zvs5NDP7oRx) \n"
+        "!pip install --upgrade xlrd\n"
       ]
     },
     {
@@ -71,7 +90,7 @@
         "with open('iso_country_codes.json', 'w') as fp:\n",
         "    json.dump(iso_countries, fp, indent=4, ensure_ascii=False)"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
