--- a/EDA/EDA_findings.ipynb
+++ b/EDA/EDA_findings.ipynb
@@ -26,12 +26,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "\n",
+    "#sample"
    ]
   },
   {
