--- a/statistical modeling/linear_or_nah.ipynb
+++ b/statistical modeling/linear_or_nah.ipynb
@@ -648,7 +648,7 @@
    "cell_type": "code",
    "execution_count": 55,
    "source": [
-    "plt.scatter(x='teacher_sent_societal_contribution', y=\"SCIENCE_AVG\", data = df)dd"
+    "plt.scatter(x='teacher_sent_societal_contribution', y=\"SCIENCE_AVG\", data = df)"
    ],
    "outputs": [
     {
